--- a/Vorlesungen/vl_10.tex
+++ b/Vorlesungen/vl_10.tex
@@ -187,7 +187,7 @@
 		 I_l^{\epsilon} = & [v_{l-1}, u_l] \text{ }  (l = 2, \hdots, n) \\
 		 I_n^{\epsilon} = & [v_n, b]
 	 \end{align*}
-	Per Vorraussetzung ist $f_{\vert I_j^{\epsilon}} (j = 1,\hdots, n+1)$ stetig. \\
+	Per Voraussetzung ist $f_{\vert I_j^{\epsilon}} (j = 1,\hdots, n+1)$ stetig. \\
 	Daher existiert nach Satz~\ref{kap10_satz20}
 	eine Partition $P_j^{\epsilon}$, so dass:
 	\begin{align*}
@@ -214,7 +214,7 @@
 	 (Abbildung~\ref{plot_treppenfkt}), 
 	wenn es 
 	eine Partition $Z = \{ y_0, \hdots, y_m \}$ von $[a,b]$ gibt und für alle 
-	$i \in \{0, \hdots, m\}$ für $c_i \in \mathbb{R}$ gibt, so dass \todo{ Satzbau?}
+	$i \in \{0, \hdots, m\}$ für $c_i \in \mathbb{R}$ gibt, so dass:
 	\begin{align*}
 		f(x) = c_i \text{ } ( x\in (y_{i-1},y_i))
 	\end{align*}
