--- a/Vorlesungen/vl_14.tex
+++ b/Vorlesungen/vl_14.tex
@@ -71,8 +71,8 @@ die neben der Funktion selbst auch deren Ableitung beinhalten.
 	Wobei $\alpha, \beta \in \mathbb{R}$. Durch Festlegen der 
 	Anfangsposition und Geschwindigkeit, können wir $\alpha, \beta$ 
 	festlegen und erhalten eine eindeutig bestimmte (ohne Beweis) Lösung 
-	des Anfangswertproblems (das heißt Lösung der Differentialgleichung 
-	und Erfüllen der Anfangsbedingung).\todo{Der Satz kling doof formuliert} 
+	des Anfangswertproblems (das heißt eine Lösung der Differentialgleichung 
+	die die Anfangsbedingung erfüllt).
 }\end{Beispiel}
 
 \begin{Bemerkung}{
