--- a/Vorlesungen/vl_15.tex
+++ b/Vorlesungen/vl_15.tex
@@ -167,8 +167,10 @@ Es wird im Folgenden nützlich sein auch komplexwertige Funktionen ableiten zu k
 	$f$ ist in $x_0 \in I$ differenzierbar, wenn $Re(f)$ und $Im(f)$ in $x_0$
 	 differenzierbar sind. Wir sagen, dass $f$ differenzierbar ist, falls $f$ in 
 	 jedem Punkt $x_0 \in I$ differenzierbar ist.\\
-	 In diesem Falle ist die Ableitung von $f$ gegeben durch $f'(x) = Re(f')(x) 
-	 +i \cdot  Im(f') (x) $
+	 In diesem Falle ist die Ableitung von $f$ gegeben durch:
+	 \begin{align*}
+	 f'(x) = Re(f')(x) +i \cdot  Im(f') (x)
+	 \end{align*}
 }\end{Definition}
 
 \begin{Bemerkung}{
