--- a/Vorlesungen/vl_16.tex
+++ b/Vorlesungen/vl_16.tex
@@ -1,6 +1,4 @@
 %!TEX root = ../gesamt.tex
-
-\todo{Kennzeichnung als Einschub - Anfang}
 \begin{Bemerkung}{
 	Sei $I \subseteq \mathbb{R}$ ein Intervall und $\mathbb{K} = \mathbb{C}$ oder
 	$\mathbb{K} = \mathbb{R}$. Dann bedeutet $\mathbb{K}^I = \{f: I \rightarrow 
@@ -24,14 +22,14 @@
 	\end{align*}
 }\end{Bemerkung}
 
-\begin{Satz}{\todo{ohne Nummer}
+\begin{Satz*}{
 	Sei $V$ ein Vektorraum und $\emptyset \neq U \subseteq V$. Dann gilt:
 	\begin{align*}
-		U \text{ U ist ein VR } \Leftrightarrow &
+		U \text{ (U ist ein VR) } \Leftrightarrow &
 		\forall \lambda, \mu \in U : x + y \in U \\
 		\forall \lambda \in \mathbb{K} \forall x \in U: \lambda \cdot x \in U
 	\end{align*}
-}\end{Satz}
+}\end{Satz*}
 \begin{proof}
 	Lineare Algebra
 \end{proof}
@@ -111,8 +109,6 @@
 	Man nennt eine Basis des Vektorraums $L_h$ auch ein \emph{Fundamentalsystem} von 
 	\ref{vl_15_gl_3}
 }\end{Definition}
-
-\todo{Kennzeichnung Einschub - Ende}
 
 \begin{Definition}{
 	Seien $a_0, \hdots a_{n-1} \in \mathbb{C}, I \subseteq \mathbb{R}$ ein Intervall 
@@ -281,7 +277,7 @@
 	\end{align*}		
 	Wir wenden
 	\begin{align*}
-		(\lambda_{k+1} - \frac{\mathrm{d}}{\mathrm{dt}})
+		\left(\lambda_{k+1} - \frac{\mathrm{d}}{\mathrm{dt}}\right)
 	\end{align*} auf obige Gleichung an.
 	Also: 
 	\begin{align*}
