--- a/Vorlesungen/vl_17.tex
+++ b/Vorlesungen/vl_17.tex
@@ -102,7 +102,7 @@ $f_n$ bezeichnen.
 
 \begin{Definition}{
 	Sei $D \subseteq \mathbb{K}$ und $(f_n)_{n \in \mathbb{N}}$ eine Folge von 
-	Funktionen $f_n : D \rightarrow \mathbb{K}$. Wir sagen, $(f_n)$ \highl[Konvergenz!punktweise]{konvergiert 
+	Funktionen \\ $f_n : D \rightarrow \mathbb{K}$. Wir sagen, $(f_n)$ \highl[Konvergenz!punktweise]{konvergiert 
 	Punktweise} gegen $f:D \rightarrow \mathbb{K}$, falls für alle $x \in D$ gilt:
 	\begin{align*}
 		\lim \limits_{n \rightarrow \infty}{f_n(x) =f(x)}
