--- a/Vorlesungen/vl_18.tex
+++ b/Vorlesungen/vl_18.tex
@@ -54,8 +54,8 @@
 		$(f_n)$ konvergiert genau dann gleichmäßig, wenn gilt:
 	\end{center}
 	\begin{align}\label{vl_18_gl_1}
-		\forall \epsilon > 0 \text{ } \exists n_{\epsilon} \text{ }\forall n,m \geq 	
-		n_{\epsilon} \text{ }\forall x \in D : \abs{f_n(x) - f_m(x)} < \epsilon
+		\forall \epsilon > 0 \; \exists n_{\epsilon} \in \IN \;\forall n,m \geq 	
+		n_{\epsilon} \;\forall x \in D : \abs{f_n(x) - f_m(x)} < \epsilon
 	\end{align}
 }\end{Satz}
 
@@ -77,7 +77,7 @@
 	Wir definieren: 
 	\begin{align*}
 		f: D \rightarrow & \mathbb{K} \\
-		x \mapsto \lim\limits_{n \rightarrow \infty} f_n(x)
+		x \mapsto & \lim\limits_{n \rightarrow \infty} f_n(x)
 	\end{align*}		
 	Es bleibt zu zeigen, dass $(f_n)$ gleichmäßig gegen $f$ konvergiert. 
 	Sei $\epsilon > 0$ gegeben. Dann existiert nach \ref{vl_18_gl_1} ein 
