--- a/Vorlesungen/vl_22.tex
+++ b/Vorlesungen/vl_22.tex
@@ -130,6 +130,7 @@ gilt, wobei $\delta$ wie in Punkt~\ref{vl_22_stp_2} gewählt sei. Dann gilt:
 	\end{itemize}
 }\end{Beispiel}
 
+\cleardoublepage
 \section{Topologie metrischer Räume}
 Eng verwandt mit dem Begriff der offenen Kugel um einen Punkt sind die folgenden 
 Konzepte:
