--- a/Vorlesungen/vl_24.tex
+++ b/Vorlesungen/vl_24.tex
@@ -1,3 +1,4 @@
+\cleardoublepage
 \section{Grenzwerte \& Stetigkeit von Abbildungen zwischen metrischen Räumen}
 
 Wir wollen, ganz analog zu Fall reell- beziehungsweise komplexwertiger Funktionen, 
