--- a/Vorlesungen/vl_26.tex
+++ b/Vorlesungen/vl_26.tex
@@ -81,6 +81,7 @@
 	Damit existiert also ein $k \in K$ mit $f(k) = M$. 
 \end{proof}
 
+\cleardoublepage
 \section{Der Banach'sche Fixpunktsatz}
 
 \begin{Definition}%1
