--- a/gesamt.tex
+++ b/gesamt.tex
@@ -61,6 +61,9 @@
     \newtheorem{Satz}{Satz}[section]
     \theoremstyle{plain}
 
+    \newtheorem*{Satz*}{Satz}
+    \theoremstyle{plain}
+
     \newtheorem*{Bemerkung}{Bemerkung}
     \theoremstyle{plain}
 
