--- a/Vorlesungen/vl_20.tex
+++ b/Vorlesungen/vl_20.tex
@@ -76,7 +76,7 @@ normierten Räume, insbesondere die, die eine Vektorraum-Struktur besitzen.
 		\item \label{def:norm:2} $ \norm{v + w} \leq \norm{v} + \norm{w}$
 		\item \label{def:norm:3} $\norm{\alpha v} = \abs{\alpha}\cdot\norm{v}$
 	\end{enumerate}
-	Das Paar $(v, \norm{\cdot})$ heißt \emph{normierter Raum}.
+	Das Paar $(V, \norm{\cdot})$ heißt \emph{normierter Raum}.
 }\end{Definition}
 
 \begin{Definition}[Induzierte Metrik]{\todo{gleichzeitig auch Proposition}%5 
