--- a/Vorlesungen/vl_23.tex
+++ b/Vorlesungen/vl_23.tex
@@ -96,7 +96,7 @@ folgende alternative Charakterisierung von konvergenten Folgen.
 	Sei $(X,d)$ ein metrischer Raum. Dann heißt
 	\begin{itemize}
 		\item $$\mathop{int} M := \overset{\circ}{M} := M^{\circ} := \bigcup_{\substack{u \subseteq M\\ U \text{ist offen}}} U $$ das \highl[Innere!Menge]{Innere von $M$}
-		\item $\partial M := \bar{M} := \cap_{A \supseteq B, A \text{ ist abgeschlossen}}$ den \highl{Abschluss} von $M$ 
+		\item $\partial M := \bar{M} := \cap_{A \supseteq M, A \text{ ist abgeschlossen}}$ den \highl{Abschluss} von $M$ 
 		\item $\partial M := \bar{M} \setminus \overset{\circ}{M}$ 
 		den \highl{Rand} von $M$
 	\end{itemize}
