--- a/Vorlesungen/vl_24.tex
+++ b/Vorlesungen/vl_24.tex
@@ -221,8 +221,7 @@ Begriffe wie den Grenzwert und Stetigkeit untersuchen.
 	\end{align*}
 	Das heißt $\norm{B_\delta(x)} \subseteq B_\delta(\norm{x})$.
 \end{proof}
-\todo{soll das einfach so stehen oder in eine Umgebung?}
-Ein weiteres wichtiges Beispiel stetiger Funktionen: \\
+Ein weiteres wichtiges Beispiel stetiger Funktionen:
 \begin{Beispiel*}
 	Wir definieren die \emph{Koordinaten-Funktion}
 	\begin{align*}
