--- a/Vorlesungen/vl_26.tex
+++ b/Vorlesungen/vl_26.tex
@@ -85,7 +85,7 @@
 \section{Der Banach'sche Fixpunktsatz}
 
 \begin{Definition}%1
-	Seien $X,Y$ metrischer Raum eine Abbildung $f: X \rightarrow Y$ heißt 
+	Seien $X,Y$ metrischer Räume, eine Abbildung $f: X \rightarrow Y$ heißt 
 	\emph{Lipschitz-stetig}, wenn ein $L > 0$ existiert mit:
 	\begin{align*}
 		\forall x_1, x_1 \in X: d(f(x_1),f(x_2)) \leq L \cdot d(x_1,x_2)
