--- a/Vorlesungen/vl_07.tex
+++ b/Vorlesungen/vl_07.tex
@@ -35,9 +35,9 @@
 	\textbf{Fall 2:}$h \neq const$ Offensichtlich ist $h$ stetig auf dem 
 	abgeschlossenen Intervall $[a,b]$. Damit besitzt $h$ ein globales Maximum und 
 	ein globales Minimum. Ohne Einschränkung existiert ein $\tilde{\xi} \in (a,b)$
-	 mit $h(\tilde{\xi}) > h(a)$, sonst betrachte $-h$ statt $h$. \\
-	 Also existiert ein $\xi \in (a,b)$ mit $h(\xi) \geq h(x)\textbf{ }
-	  (x \in [a,b])$. 
+	 mit $h(\tilde{\xi}) > h(a)$, sonst betrachte $-h$ statt $h$.\footnote{Basti: Das ist wichtig, um sicher zu stellen, dass  das globale Maximum nicht in $a$ oder $b$ angenommen wird. $\overline\xi$ ist erst einmal ein beliebiger Punkt und noch nicht zwingend das globale Maximum.} \\
+	 Also existiert ein $\xi \in (a,b)$ mit $h(\xi) \geq h(x)\;
+	  (x \in [a,b])$.  \footnote{Basti: Das $\xi$ ohne Dach ist jetzt unser glob. Maximum, was nach der Argumentation zuvor o.E. nicht mehr in $a$ oder $b$ angenommen wird.}
 	 Mit anderen Worten: $\xi$ ist auch ein globales Maximum und und daher auch 
 	 ein lokales Maximum. Mit Satz~\ref{satz_8}
 	 folgt: $h'(\xi) = 0$
