--- a/Vorlesungen/vl_12.tex
+++ b/Vorlesungen/vl_12.tex
@@ -166,8 +166,10 @@
 	Weiter aufgrund der Linearität des Integrals:
 	\begin{align*}
 		\int_a^bfG + Fg \dd{t} = \int_a^b fG\dd{t} + \int_a^b Fg\dd{t} \\
-		\ref{vl_12_gl_1}-\int_a^b fG\dd{t}
+		%\ref{vl_12_gl_1}
+		-\int_a^b fG\dd{t}
 	\end{align*}
+	\todo{hier ist im Code was komisch\dots so ein \enquote{ref}}
 	liefert die Behauptung.
 \end{proof}
 
