--- a/Vorlesungen/vl_14.tex
+++ b/Vorlesungen/vl_14.tex
@@ -108,7 +108,7 @@ die neben der Funktion selbst auch deren Ableitung beinhalten.
 	Sei $G \subseteq \mathbb{R}^2$ und $f : G \rightarrow \mathbb{R}$ stetig. Dann 
 	nennen wir
 	\begin{align}\label{vl_14_gl_1}
-		\frac{\mathrm{dx(t)}}{\mathrm{dx}} = f(t,x(t))
+		\frac{\mathrm{dx(t)}}{\mathrm{dt}} = f(t,x(t))
 	\end{align}
 	eine \emph{(explizite gewöhnliche) Differentialgleichung 1. Ordnung}. Wir 
 	sagen:\\
