Korrektur Lipschitz-stetig

--- a/Vorlesungen/vl_26.tex
+++ b/Vorlesungen/vl_26.tex
@@ -1,3 +1,4 @@
+%!TEX root = ../gesamt.tex
 \begin{proof}
 	Angenommen $f$ ist nicht gleichmäßig stetig. Dann existiert für $n \in \IN$ ein 
 	Paar $x_n,y_n \in X$ sowie $\epsilon > 0$ mit: $d(x_n,y_n) < \frac{1}{n}$ und 
@@ -88,7 +89,7 @@
 	Seien $X,Y$ metrischer Räume, eine Abbildung $f: X \rightarrow Y$ heißt 
 	\emph{Lipschitz-stetig}, wenn ein $L > 0$ existiert mit:
 	\begin{align*}
-		\forall x_1, x_1 \in X: d(f(x_1),f(x_2)) \leq L \cdot d(x_1,x_2)
+		\forall x_1, x_2 \in X: d(f(x_1),f(x_2)) \leq L \cdot d(x_1,x_2)
 	\end{align*}
 	in diesem Fall nennen wir $L$ eine \emph{Lipschitz-Konstante} von $f$.
 	Wir sagen eine Abbildung $f: X \rightarrow Y$ ist eine \emph{Kontraktion}, 
