--- a/gesamt.tex
+++ b/gesamt.tex
@@ -44,7 +44,7 @@
 \usepackage{cases}
 \input{Diverses/mathe.tex}
 
-%\author{Merle Gänßinger}
+\author{:)}
 
 \usepackage{amsthm} 
 %\usepackage[standard]{ntheorem}                            % Theorem-Umgebung
