Korrektur Beweis Hauptsatz der differential & integral Rechnung

--- a/Vorlesungen/vl_12.tex
+++ b/Vorlesungen/vl_12.tex
@@ -83,8 +83,8 @@
 		S(P,f) - s(P,f) < & \epsilon
 	\end{align*}
 	Weiter existiert aufgrund des Mittelwertsatzes der \\Differential-Rechnung
-	(Satz~\ref{vl_07_MWS}) für alle $i = 1, \hdots, n$ ein $ xi \in 
-	[xi_{i-1},x_i]$ mit 
+	(Satz~\ref{vl_07_MWS}) für alle $i = 1, \hdots, n$ ein $ \xi_i \in 
+	[x_{i-1},x_i]$ mit 
 	\begin{align*}
 		F(x_i) - F(x_{i-1}) = &  f(\xi_i) \cdot \Delta x_i
 	\end{align*}
